<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<name>Java Ray Tracer</name>
	<description>JARA is a educational 100% Java based ray tracer.</description>
    <modelVersion>4.0.0</modelVersion>
    <groupId>de.s42m</groupId>
    <artifactId>jara</artifactId>
    <version>0.9.0</version>
    <packaging>jar</packaging>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>14</maven.compiler.source>
        <maven.compiler.target>14</maven.compiler.target>
    </properties>
	<dependencies>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.14.0</version>
		</dependency>		
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.14.0</version>
		</dependency>
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>7.3.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr4-runtime</artifactId>
			<version>4.8-1</version>
		</dependency>
	</dependencies>	
<build>
		<plugins>
			<plugin>
				<!-- https://maven.apache.org/surefire/maven-surefire-plugin/examples/testng.html -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
				<configuration>
					<argLine>--add-modules de.sft.jara -Dfile.encoding=UTF-8</argLine>
					<parallel>methods</parallel>
					<threadCount>4</threadCount>
				</configuration>
			</plugin>		
			<plugin>
				<!-- https://maven.apache.org/plugins/maven-compiler-plugin/ -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<showDeprecation>true</showDeprecation>
				</configuration>
			</plugin>
			<plugin>
				<!-- https://maven.apache.org/plugins/maven-dependency-plugin/ -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>
								${project.build.directory}/libs
							</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>			
			<plugin>
				<!-- https://maven.apache.org/plugins/maven-jar-plugin/ -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<archive>
						<manifestEntries>
							<Automatic-Module-Name>de.sft.jara</Automatic-Module-Name>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>  			
			<plugin>
				<!-- https://maven.apache.org/plugins/maven-javadoc-plugin/aggregate-mojo.html -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<outputDirectory>${project.basedir}/docs</outputDirectory>
					<reportOutputDirectory>${project.basedir}/docs</reportOutputDirectory>
					<destDir>javadoc</destDir>
					<show>private</show>
				</configuration>				
			</plugin>
		</plugins>		
	</build>	
</project>